--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ License: MIT_License
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
-Imports:
+Depends:
 	ggplot2 (>= 3.4.1),
 	geomtextpath (>= 0.1.1),
 	RColorBrewer (>= 1.1.3),
